--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    background-image: url('./app/assets/Background.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+  width: 100%;
+  height: 100vh;
+  background-image: url("./app/assets/Background.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  padding: 50px 25rem 0 25rem;
 }
