--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
-<div>
-    <div>Poetry</div>
-    <div>Foto</div>
+<div class="d-flex justify-content-between align-items-center">
+  <div class="h1">Poetry</div>
+  <div>Foto</div>
 </div>
 <app-navbar></app-navbar>
