--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,1 +1,49 @@
-<p>navbar works!</p>
+<div class="d-flex justify-content-between">
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Write</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Information</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Help</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Imprint</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <span class="navbar-text"> Language Button </span>
+</div>
+<div></div>
+<div class="d-flex justify-content-center">
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">All</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Poems</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Thoights</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Letters</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
